--- a/src/components/List/styles.module.css
+++ b/src/components/List/styles.module.css
@@ -1,10 +1,20 @@
 .container {
 	display: flex;
 	flex-direction: column;
-	border-radius: var(--mantine-radius-sm);
+	border-radius: var(--mantine-radius-md);
 	overflow: hidden;
 	max-width: 400px;
 	width: 100%;
+	padding: 1rem;
+	background-color: var(--mantine-color-dark-8);
+	transition: 0.3s ease;
+}
+
+.rolling {
+	opacity: 0;
+	user-select: none;
+	pointer-events: none;
+	transform: scale(0.975);
 }
 
 .root {
@@ -41,7 +51,6 @@
 	margin-left: auto;
 	border-radius: var(--mantine-radius-sm);
 	cursor: pointer;
-	padding: 0.75rem;
 	transition: background-color 0.075s ease-out;
 }
 
